--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "twitchuserchk",
+  "name": "twitch-username-alert",
   "version": "1.0.0",
   "description": "twitch username checker",
   "main": "main.js",
-  "author": "Ronis Xogum <rxogum@gmail.com>",
+  "author": "Ronis Xogum <ronis@xogum.net>",
   "license": "MIT",
-  "private": true,
   "dependencies": {
-    "axios": "^0.24.0",
-    "date-fns": "^2.25.0",
-    "dotenv": "^10.0.0",
-    "nodemailer": "^6.7.0"
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
+    "dotenv": "^16.0.1",
+    "nodemailer": "^6.7.8"
   }
 }
